--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<link rel="stylesheet" type="text/css" href="css.css">
 <head>
+<link rel="stylesheet" type="text/css" href="css.css" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <title>Marika Fedtke</title>
 </head>
@@ -18,7 +18,6 @@
 		</tr>
 		<tr>
 			<td></td><td>&lt;abbr&gt;&lt;/abbr&gt;</td><td>Abkürzung</td><td>Inline</td><td>ja</td>
-		</tr>
 		</tr>
 		<tr>
 			<td></td><td>&lt;acronym&gt;&lt;/acronym&gt;</td><td>Akronym</td><td>Inline</td><td>ja</td>
@@ -252,9 +251,9 @@
 	
 	<div id="left">
 	    <a href="http://validator.w3.org/check?uri=referer">
-	        <img src="http://www.w3.org/Icons/valid-xhtml10" alt="xhtml 1.0 Test"></a>
+	        <img src="http://www.w3.org/Icons/valid-xhtml10" alt="xhtml 1.0 Test" /></a>
 		<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmarikafedtke.cloudcontrolled.com%2F&amp;profile=css2">
-	        <img src="http://www.w3.org/Icons/valid-css2" alt="css Test"></a>
+	        <img src="http://www.w3.org/Icons/valid-css2" alt="css Test" /></a>
 	 </div>
 
 	
